--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -32,12 +32,14 @@ $metal-200: #E5E7EB;
 $metal-300: #D1D5DB;
 $metal-400: #9CA3B0;
 $metal-500: #6B7280;
+$metal-600: #4B5563;
 $metal-700: #384252;
 $metal-800: #1F2937;
 
 //base
 $base-50: rgba(26, 26, 26, 0.05);
 $base-500: rgba(26, 26, 26, 0.5);
+$base-900: #1A1A1A;
 
 //dark
 $dark: #1C1C28;
