--- a/src/containers/Header/styles.module.scss
+++ b/src/containers/Header/styles.module.scss
@@ -1,9 +1,10 @@
 // @import '../../assets/styles/mixins';
+@import 'src/styles/helpers';
 
 .header {
   width: 100%;
   height: 100px;
-  // @include flexbox(center, center);
   gap: 50px;
   background-image: linear-gradient(to right, #fa709a 0%, #fee140 100%);
+  @include space(padding, 0.2,0.4,1);
 }
