--- a/.storybook/styles.module.scss
+++ b/.storybook/styles.module.scss
@@ -1,6 +1,6 @@
 @import '../src/assets/styles/index.scss';
 
 .app {
-  background: var(--default-background);
-  height: 100%;
+  background: var(--default-background); 
+  min-height: 100%;
 }
