--- a/src/styles/_helpers.scss
+++ b/src/styles/_helpers.scss
@@ -3,23 +3,48 @@
 @import 'mixins';
 @import 'variables';
 
+$spacing-step: 8;
+
+$spacing: (4,8,16,24,32,40,48,56,64,80,100);
+
 @function scale-size($unit) {
-  @return $unit * $main-unit;
+  @return $unit * $main-unit + ' ';
 }
 
 @function map($array, $func) {
   $result: '';
   @for $i from 0 through length($array) - 1 {
     $result: $result + call(get-function($func), list.nth($array, $i + 1));
-    @if $i != length($array) - 1 {
-      $result: $result + ' ';
-    }
   }
-  @return $result;
+  @return unquote($result);
 }
 
 @mixin space($property, $spaces...) {
-  #{$property}: unquote(map($spaces, scale-size));
+  #{$property}: map($spaces, scale-size);
+}
+
+@function get-normalize-spacing($size) {
+  @if($size < list.nth($spacing,1)){
+    @return list.nth($spacing,1) + 'px ';
+  }
+  @if($size > list.nth($spacing,-1)){
+    @return list.nth($spacing,-1) + 'px ';
+  }
+  $div: $size % $spacing-step;
+  @if($div == 0){
+    @return $size + 'px ';
+  }
+  @if($div >= 4){
+    $near-index: list.index($spacing, $size - $div + $spacing-step);
+    @return list.nth($spacing, $near-index) + 'px ';
+  } @else {
+    $near-index: list.index($spacing, $size - $div);
+    @return list.nth($spacing, $near-index) + 'px ';
+  }
+}
+
+@function space($spaces...) {
+  @return map($spaces, get-normalize-spacing);
 }
 
 @mixin shadow-0() {
