--- a/src/styles/_helpers.scss
+++ b/src/styles/_helpers.scss
@@ -26,7 +26,7 @@
   box-shadow: $shadow-xl;
 }
 
-@mixin border-like-shadow($width: 1px, $color: $color-dark, $extra: false) {
+@mixin border-like-shadow($width: 1px, $color: $metal-300, $extra: false) {
   border: 0px solid transparent;
   @if $extra {
     box-shadow: 0px 0px 0px $width $color, $extra;
