--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -57,6 +57,7 @@ $base-50: rgba(26, 26, 26, 0.05);
 $base-200: rgba(26, 26, 26, 0.2);
 $base-500: rgba(26, 26, 26, 0.5);
 $base-400: rgba(26, 26, 26, 0.4);
+$base-700: rgba(26, 26, 26, 0.7);
 $base-900: #1A1A1A;
 
 //dark
