--- a/src/components/Checkbox/styles.scss
+++ b/src/components/Checkbox/styles.scss
@@ -2,7 +2,108 @@
 @import 'src/assets/styles/mixins';
 @import 'src/styles/helpers';
 
-.checkbox { 
-    margin: space(28, 24, 15, 120);
-    @include border-radius("card");
+$checkbox-size: 24px;
+
+.checkbox {
+  &.disabled{
+      pointer-events: none;
+  }
+  &-input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 0;
+    &:focus {
+      & + .checkbox-inner {
+        .checkbox {
+          &-tick {
+            @include border-like-shadow(
+              var(--checkbox-focus-border-width),
+              var(--checkbox-focus-border)
+            );
+          }
+        }
+      }
+    }
+    &:active {
+      & + .checkbox-inner {
+        .checkbox {
+          &-tick {
+            background: var(--checkbox-active-background);
+            @include border-like-shadow(
+              var(--checkbox-focus-border-width),
+              var(--checkbox-focus-border)
+            );
+            &::before {
+              opacity: 0.5;
+            }
+          }
+        }
+      }
+    }
+
+    &:checked {
+      & + .checkbox-inner {
+        .checkbox {
+          &-tick {
+            background: var(--checkbox-active-background);
+            @include border-like-shadow(
+              var(--checkbox-focus-border-width),
+              var(--checkbox-focus-border)
+            );
+            &::before {
+              opacity: 1;
+            }
+          }
+        }
+      }
+    }
+    &:disabled {
+      pointer-events: none;
+      & + .checkbox-inner {
+        opacity: 0.5;
+      }
+    }
+  }
+  &-inner {
+    @include flex(row, center, flex-start);
+    .checkbox {
+      &-tick {
+        position: relative;
+        width: $checkbox-size;
+        height: $checkbox-size;
+        margin-right: space(13);
+        background: var(--checkbox-default-background);
+        cursor: pointer;
+        @include border-like-shadow(
+          var(--checkbox-default-border-width),
+          var(--checkbox-default-border)
+        );
+        @include border-radius;
+        @include transition;
+        &:hover {
+          @include border-like-shadow(
+            var(--checkbox-hover-border-width),
+            var(--checkbox-hover-border)
+          );
+        }
+        &::before {
+          content: '';
+          position: absolute;
+          top: 0;
+          left: 0;
+          bottom: 0;
+          right: 0;
+          background-image: url("data:image/svg+xml;utf8,<svg width='16' height='13' viewBox='0 0 16 13' fill='none' xmlns='http://www.w3.org/2000/svg'><g filter='url(%23filter0_d_442_29818)'><path fill-rule='evenodd' clip-rule='evenodd' d='M13.3851 0.496566C13.9392 -0.119199 14.8877 -0.169117 15.5034 0.385072C16.1192 0.93926 16.1691 1.88769 15.6149 2.50346L6.61494 12.5035C6.04003 13.1422 5.04703 13.1684 4.43934 12.5607L0.43934 8.56067C-0.146447 7.97489 -0.146447 7.02514 0.43934 6.43935C1.02513 5.85357 1.97487 5.85357 2.56066 6.43935L5.44271 9.3214L13.3851 0.496566Z' fill='white'/></g><defs><filter id='filter0_d_442_29818' x='0' y='0' width='16' height='13.75' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'><feFlood flood-opacity='0' result='BackgroundImageFix'/><feColorMatrix in='SourceAlpha' type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0' result='hardAlpha'/><feOffset dy='0.75'/><feComposite in2='hardAlpha' operator='out'/><feColorMatrix type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.15 0'/><feBlend mode='normal' in2='BackgroundImageFix' result='effect1_dropShadow_442_29818'/><feBlend mode='normal' in='SourceGraphic' in2='effect1_dropShadow_442_29818' result='shape'/></filter></defs></svg>");
+          background-repeat: no-repeat;
+          background-size: 80% 80%;
+          background-position: center;
+          opacity: 0;
+          @include transition;
+        }
+      }
+    }
+  }
+  @include border-radius('card');
 }
