--- a/src/assets/styles/_normalize.scss
+++ b/src/assets/styles/_normalize.scss
@@ -39,12 +39,9 @@ div[id="root"] {
   }
 
   a {
-    display: inline-block;
+    // display: inline-block;
     text-decoration: none;
-    color: inherit;
-  }
-  img {
-    // transition: $transition-time;
+    // color: inherit;
   }
 
   button {
