--- a/src/components/TabBar/styles.scss
+++ b/src/components/TabBar/styles.scss
@@ -13,7 +13,7 @@
     @include flex(row, center, center);
     &-tab {
       padding: 19px 0;
-      color: $metal-400;
+      color: var(--tab-default);
       font-weight: 500;
       width: 110px;
       font-size: 16px;
@@ -31,10 +31,10 @@
         }
       }
       &:hover {
-        color: $accent;
+        color: var(--tab-hover);;
       }
       &.active-tab {
-        color: $accent;
+        color: var(--tab-hover);;
         &:after {
           transform: translateY(-100%);
         }
@@ -50,7 +50,7 @@
       left: 0;
       width: 100%;
       height: 4px;
-      background: $accent;
+      background: var(--tab-hover);;
       @include transition;
     }
   }
